Borrador_BCE.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,31 +1,35 @@
-name: Descargar datos BCE
+name: Descargar Datos de Desempleo Ecuador
 
 on:
-  workflow_dispatch:  # para ejecutarlo manualmente
+  push:
+    paths:
+      - 'trigger_update.txt'  # Se activará solo cuando este archivo cambie
 
 jobs:
-  descargar_bce:
+  descargar-datos:
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Clonar repositorio
-      uses: actions/checkout@v3
-
-    - name: Instalar R
-      uses: r-lib/actions/setup-r@v2
-
-    - name: Instalar paquetes necesarios
-      run: |
-        Rscript -e "install.packages('rvest', repos='http://cran.us.r-project.org')"
-        Rscript -e "install.packages('xml2', repos='http://cran.us.r-project.org')"
-
-    - name: Ejecutar script R
-      run: Rscript descargar_bce.R
-
-    - name: Subir archivo al repositorio (opcional)
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add tasa_desempleo.csv
-        git commit -m "Datos de desempleo actualizados automáticamente"
-        git push
+      - name: Checkout del repositorio
+        uses: actions/checkout@v3
+      
+      - name: Configurar R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.2.0'
+      
+      - name: Instalar dependencias
+        run: |
+          R -e 'install.packages(c("jsonlite", "dplyr", "httr"), repos = "https://cloud.r-project.org")'
+      
+      - name: Ejecutar script R de descarga de datos
+        run: |
+          Rscript scripts/descargar_desempleo.R
+      
+      - name: Confirmar y publicar los datos actualizados
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add datos/
+          git commit -m "Actualizar datos de desempleo [Actualización automática]" || echo "No hay cambios que confirmar"
+          git push
